--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "ext-openssl": "*",
         "ext-mcrypt": "*",
         "symfony/config": "^2.3 || ^3.0",
-        "symfony/dependency-injection": "^2.3 || ^3.0"
+        "symfony/dependency-injection": "^2.3 || ^3.0",
+        "bitpay/php-client": "~2.2"
     },
     "require-dev": {
         "behat/behat": "2.5.*@stable",
